--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ ART FACTORY
 https://templatemo.com/tm-537-art-factory
 
 -->
-    <!-- Additional CSS Files -->      
+    <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="assets/css/templatemo-art-factory.css">
@@ -212,12 +212,12 @@ https://templatemo.com/tm-537-art-factory
           <div class="tm-address-box">
             <h4 class="tm-info-title" style="color:#e63b3b;">Our Address</h4>
             <address style="margin-bottom:15px;">
-              180 Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus 10550
+              Tilak Residency, Indrayni Nagar, Bhosari, Pune Maharashtra
             </address>
             <a href="tel:080-090-0110" class="tm-contact-link">
               <i class="fa fa-phone " style="color:#e63b3b;"> <span style="color: #707070; font-size:17px; margin-left:5px;">080-090-0110</span></i>
             </a>
-            <a href="mailto:info@company.co" class="tm-contact-link">
+            <a href="mailto:buba" class="tm-contact-link">
               <i class="fa fa-envelope " style="color:#e63b3b; margin-left:8px;"> <span style="color: #707070; font-size:17px; margin-left:3px;"> bubaastore@gmail.com</span></i>
             </a>
           </div>
