--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ https://templatemo.com/tm-537-art-factory
                       <h5>About us</h5>
                   </div>
                   <div class="text-center">
-                      <p> BuBaa is retail chain that offers custom printing on all types of fabric all under one roof <br>
-                        We are team of 2 delivery an honest service in feild of Digital Graphic imagrs and Textile Requirements.
+                      <p>  BuBaa is a retail chain that offers custom printing on all types of fabric all under one roof.  <br>
+                         We are a team of 2 delivery an honest service in the field of Graphic Designs and Textile Requirements.
                       </p>
 
                   </div>
