--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@ https://templatemo.com/tm-537-art-factory
                            3. Click "Share" and choose "Embed map" tab
                            4. Copy only URL and paste it within the src="" field below
                     -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3780.5679540779975!2d73.8408251153805!3d18.638492770420534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c78a2330fcfd%3A0x3a36284f88cf15a4!2sTilak%20Residency!5e0!3m2!1sen!2sin!4v1622272990898!5m2!1sen!2sin" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3780.5679540779975!2d73.8408251153805!3d18.638492770420534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c78a2330fcfd%3A0x3a36284f88cf15a4!2sTilak%20Residency!5e0!3m2!1sen!2sin!4v1622273090994!5m2!1sen!2sin" width="100%" height="500px" style="border:0;" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
                 </div>
                 <!-- ***** Contact Map End ***** -->
