--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <p>get your first tee with 15% off on your first order and 20% off on bulk order </p>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                        <img src="assets/images/slider-icon3.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic" width="800px">
+                        <img src="assets/images/slider-icon3.png" class="img-fluid d-block mx-auto" alt="First Vector Graphic" width="800px">
                     </div>
                 </div>
             </div>
