--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="owl-carousel owl-theme">
                     <div class="item service-item">
-                        <h5 class="service-title"> Round Neck T-Shirt Printing </h5>
+                        <h5 class="service-title"> Round Neck T-Shirt</h5>
                         <img src="assets/images/tshirt.png" alt="" width="10px">
                         <a href="#" class="main-button">Explore</a>
                     </div>
